--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
     <title> Contact page </title>
     <body> <p>welcome to the contacts page </p>
-            <p></p>
+            <p>contact us</p>
     </body>
 </html>
